--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "name": "portfolio",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "fmt": "prettier --write ."
   },
   "dependencies": {
     "@geist-ui/react": "^2.1.0-canary.2",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.5"
   }
 }
